@@ -6,3 +6,4 @@ Translators:
 Ernesto Avilés Vzqz (Spanish translation)
 @underr (Brazillian Portuguese translation)
 Виктор Слободян (Ukrainian translation)
+Steve Lemuel (Chinese translation)
