@@ -1,5 +1,8 @@
 Вер.2.0.2:
 + добавлены теги $fan*
++ добавлен китайский перевод (спасибо @Lemueler)
+- удалено ps stats из уведомлений
+* еще один фикс тегов cpu* и cpucl
 
 Вер.2.0.1:
 + добавлена поддержка кастомных интерфейсов
