@@ -1,5 +1,8 @@
 Ver.2.0.2:
 + add $fan* tags
++ add Chinese translation (thanks to @Lemueler)
+- remove ps stats from notification
+* yet another fix cpu* and cpucl*
 
 Ver.2.0.1:
 + add support of custom interfaces
